k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ai-api-service

spec:
  type: NodePort

  selector:
    app: ai-api

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
